	* Fixed the installation path in 'images/Makefile.am' so the
	'make install' rule would work.
	* Changed the 'apache2' dependency to 'httpd' in 'loudwater.spec.in'.
2014-05-14 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.8.
2014-05-14 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'perl-HTML-Parser' dependency in 'loudwater.spec.in'.
2014-05-14 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.9.
2014-05-30 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'sox' dependency in 'loudwater.spec.in'.
2014-05-30 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'htdocs/admin.pl' that broke display of the
	channel mode in the Edit Button screen.
2014-05-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.10.
2014-10-20 Fred Gleason <fredg@paravelsystems.com>
	* Renamed 'configure.in' to 'configure.in'.
	* Modernized the 'AM_INIT()' and 'AC_INIT()' invocations in
	'configure.ac'.
2014-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Refactored 'loudwater.spec.in' to use DESTDIR.
	* Added a 'FEEDSETS' table to the database.
	* Incremented the database version to 52.
	* Added a 'Manage Live Streams' button to the main administrative
	screen in 'htdocs/admin.pl'.
2014-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.11.0.
2015-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'FEEDSETS.LOGO_LINK' field to the database.
	* Incremented the database version to 53.
	* Added a 'Logo Link' control to the 'Edit Live Feed' screen in
	'htdocs/admin.pl'.
	* Added an 'image' tag to the live stream data feed in
	'htdocs/live.pl'.
2015-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.12.0.
2015-04-06 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'htdocs/admin.pl' that caused the 'Sunday'
	checkbox in the 'Edit Live Feed' screen to fail to be initialized
	correctly.